
Name: elm-compiler
Version: 0.17

Synopsis:
    Values to help with elm-package, elm-make, and elm-lang.org.

Description:
    Elm aims to make client-side web-development pleasant. It is a
    statically/strongly typed, functional reactive language that compiles to
    HTML, CSS, and JS. This package provides a couple helpful values that are
    intended for use in packages such as elm-package and elm-make.

Homepage: http://elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2011-2016 Evan Czaplicki

Category: Compiler, Language

Extra-source-files: changelog.md

Cabal-version: >=1.9
Build-type: Simple

source-repository head
    type:     git
    location: git://github.com/elm-lang/elm-compiler.git


Flag dev {
  Description: Turn off optimization and make warnings errors
  Default: False
}


Library
    if flag(dev)
        ghc-options: -O0 -W -Werror
    else
        ghc-options: -O2

    Hs-Source-Dirs:
        src

    exposed-modules:
        Elm.Compiler,
        Elm.Compiler.Module,
        Elm.Compiler.Type,
        Elm.Docs,
        Elm.Package,
        Elm.Utils

    other-modules:
        AST.Declaration,
        AST.Effects,
        AST.Expression.Canonical,
        AST.Expression.General,
        AST.Expression.Optimized,
        AST.Expression.Source,
        AST.Expression.Valid,
        AST.Helpers,
        AST.Literal,
        AST.Module,
        AST.Module.Name,
        AST.Pattern,
        AST.Type,
        AST.Variable,
        Canonicalize,
        Canonicalize.Body,
        Canonicalize.Effects,
        Canonicalize.Environment,
        Canonicalize.Setup,
        Canonicalize.Sort,
        Canonicalize.Type,
        Canonicalize.Variable,
        Compile,
        Docs.AST,
        Docs.Centralize,
        Docs.Check,
        Elm.Compiler.Imports,
        Elm.Compiler.Type.Extract,
        Elm.Compiler.Version,
        Generate.JavaScript,
        Generate.JavaScript.Builder,
        Generate.JavaScript.BuiltIn,
        Generate.JavaScript.Expression,
        Generate.JavaScript.Foreign,
        Generate.JavaScript.Helpers,
        Generate.JavaScript.Literal,
        Generate.JavaScript.Variable,
        Nitpick.Pattern,
        Nitpick.PatternMatches,
        Nitpick.TopLevelTypes,
        Optimize,
        Optimize.Case,
        Optimize.DecisionTree,
        Optimize.Environment,
        Optimize.Inline,
        Parse.Binop,
        Parse.Declaration,
        Parse.Expression,
        Parse.Helpers,
        Parse.Literal,
        Parse.Module,
        Parse.Parse,
        Parse.Pattern,
        Parse.Type,
        Reporting.Annotation,
        Reporting.Bag,
        Reporting.Error,
        Reporting.Error.Canonicalize,
        Reporting.Error.Docs,
        Reporting.Error.Helpers,
        Reporting.Error.Pattern,
        Reporting.Error.Syntax,
        Reporting.Error.Type,
        Reporting.Region,
        Reporting.Render.Code,
        Reporting.Render.Type,
        Reporting.Report,
        Reporting.Result,
        Reporting.Warning,
        Type.Constrain.Effects,
        Type.Constrain.Expression,
        Type.Constrain.Literal,
        Type.Constrain.Pattern,
        Type.Environment,
        Type.Fragment,
        Type.Inference,
        Type.Solve,
        Type.State,
        Type.Type,
        Type.Unify,
        Validate,
        Paths_elm_compiler

    Build-depends:
        aeson >= 0.7 && < 0.9,
        aeson-pretty >= 0.7 && < 0.8,
        ansi-terminal >= 0.6.2.1 && < 0.7,
        ansi-wl-pprint >= 0.6.7 && < 0.7,
        base >=4.2 && <5,
        binary >= 0.7.0.0 && < 0.8,
        bytestring >= 0.9 && < 0.11,
        containers >= 0.3 && < 0.6,
        directory >= 1.0 && < 2.0,
        edit-distance >= 0.2 && < 0.3,
        filepath >= 1 && < 2.0,
        indents >= 0.3 && < 0.4,
        language-ecmascript >= 0.15 && < 0.18,
        language-glsl >= 0.0.2 && < 0.3,
        mtl >= 2.2 && < 3,
        parsec >= 3.1.1 && < 3.5,
        pretty >= 1.0 && < 2.0,
        process,
        text >= 1 && < 2,
        union-find >= 0.2 && < 0.3


Executable elm
    ghc-options:
        -threaded -O2 -W

    Hs-Source-Dirs:
        src

    Main-is:
        CommandLineRouter.hs

    other-modules:
        Elm.Compiler.Version,
        Paths_elm_compiler

    Build-depends:
        base >=4.2 && <5,
        aeson >= 0.7 && < 0.9,
        binary >= 0.7.0.0 && < 0.8,
        directory >= 1.0 && < 2.0,
        filepath >= 1 && < 2.0,
        text >= 1 && < 2,
        process


Test-Suite compiler-tests
    ghc-options:
        -O0

    Type:
        exitcode-stdio-1.0

    Hs-Source-Dirs:
        tests, src

    Main-is:
        Test.hs

    other-modules:
        Test.Compiler
        Test.Property
        Test.Property.Arbitrary
        AST.Helpers
        AST.Literal

    build-depends:
        test-framework > 0.8 && < 0.9,
        test-framework-hunit >= 0.3 && < 0.4,
        test-framework-quickcheck2 >= 0.3 && < 0.4,
        HUnit >= 1.1 && < 2,
        QuickCheck >= 2 && < 3,
        aeson >= 0.7 && < 0.9,
        aeson-pretty >= 0.7 && < 0.8,
        ansi-terminal >= 0.6.2.1 && < 0.7,
        ansi-wl-pprint >= 0.6.7 && < 0.7,
        base >=4.2 && <5,
        binary >= 0.7.0.0 && < 0.8,
        bytestring >= 0.9 && < 0.11,
        containers >= 0.3 && < 0.6,
        directory >= 1.0 && < 2.0,
        edit-distance >= 0.2 && < 0.3,
        filemanip >= 0.3.5 && < 0.4,
        filepath >= 1 && < 2.0,
        indents >= 0.3 && < 0.4,
        language-ecmascript >= 0.15 && < 0.18,
        language-glsl >= 0.0.2 && < 0.3,
        mtl >= 2.2 && < 3,
        parsec >= 3.1.1 && < 3.5,
        pretty >= 1.0 && < 2.0,
        process,
        text >= 1 && < 2,
        union-find >= 0.2 && < 0.3
