
Name: elm-compiler
Version: 0.19.0

Synopsis:
    Values to help with elm-package, elm-make, and elm-lang.org.

Description:
    Elm aims to make client-side web-development pleasant. It is a
    statically/strongly typed, functional reactive language that compiles to
    HTML, CSS, and JS. This package provides a couple helpful values that are
    intended for use in packages such as elm-package and elm-make.

Homepage: http://elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2011-2016 Evan Czaplicki

Category: Compiler, Language

Extra-source-files: changelog.md

Cabal-version: >=1.9
Build-type: Simple

source-repository head
    type:     git
    location: git://github.com/elm-lang/elm-compiler.git


Flag dev {
  Description: Turn off optimization and make warnings errors
  Default: False
}


Library
    if flag(dev)
        ghc-options: -O0 -Wall -Werror
    else
        ghc-options: -O2 -fsimpl-tick-factor=200

    Hs-Source-Dirs:
        src

    exposed-modules:
        Elm.Compiler,
        Elm.Compiler.Module,
        Elm.Compiler.Objects,
        Elm.Compiler.Type,
        Elm.Docs,
        Elm.Kernel,
        Elm.Header,
        Elm.Name,
        Elm.Package,
        Elm.Utils,
        Json.Decode,
        Json.Encode

    other-modules:
        AST.Canonical,
        AST.Optimized,
        AST.Source,
        AST.Module.Name,
        AST.Utils.Binop,
        AST.Utils.Shader,
        AST.Utils.Type,
        AST.Valid,
        Canonicalize.Effects,
        Canonicalize.Environment,
        Canonicalize.Environment.Dups,
        Canonicalize.Environment.Foreign,
        Canonicalize.Environment.Local,
        Canonicalize.Expression,
        Canonicalize.Module,
        Canonicalize.Pattern,
        Canonicalize.Type,
        Compile,
        Data.Bag,
        Data.Index,
        Data.OneOrMore,
        Elm.Compiler.Imports,
        Elm.Compiler.Type.Extract,
        Elm.Compiler.Version,
        Elm.Interface,
        Generate.JavaScript,
        Generate.JavaScript.Builder,
        Generate.JavaScript.Expression,
        Generate.JavaScript.Name,
        Json.Decode.Internals,
        Nitpick.PatternMatches,
        Optimize.Case,
        Optimize.DecisionTree,
        Optimize.Expression,
        Optimize.Module,
        Optimize.Names,
        Optimize.Port,
        Parse.Declaration,
        Parse.Expression,
        Parse.Module,
        Parse.Parse,
        Parse.Pattern,
        Parse.Primitives,
        Parse.Primitives.Internals,
        Parse.Primitives.Kernel,
        Parse.Primitives.Keyword,
        Parse.Primitives.Number,
        Parse.Primitives.Shader,
        Parse.Primitives.Symbol,
        Parse.Primitives.Utf8,
        Parse.Primitives.Variable,
        Parse.Primitives.Whitespace,
        Parse.Repl,
        Parse.Shader,
        Parse.Type,
        Reporting.Annotation,
        Reporting.Error,
        Reporting.Error.Canonicalize,
        Reporting.Error.Docs,
        Reporting.Error.Main,
        Reporting.Error.Pattern,
        Reporting.Error.Syntax,
        Reporting.Error.Type,
        Reporting.Helpers,
        Reporting.Region,
        Reporting.Render.Code,
        Reporting.Render.Type,
        Reporting.Report,
        Reporting.Result,
        Reporting.Warning,
        Type.Constraint,
        Type.Constrain.Expression,
        Type.Constrain.Module,
        Type.Constrain.Pattern,
        Type.Instantiate,
        Type.Occurs,
        Type.Solve,
        Type.Type,
        Type.Unify,
        Type.UnionFind,
        Validate,
        Paths_elm_compiler

    Build-depends:
        ansi-terminal >= 0.7 && < 0.8,
        ansi-wl-pprint >= 0.6.7 && < 0.7,
        base >=4.8 && <5,
        binary >= 0.8 && < 0.9,
        bytestring >= 0.9 && < 0.11,
        containers >= 0.5.8.2 && < 0.6,
        directory >= 1.0 && < 2.0,
        edit-distance >= 0.2 && < 0.3,
        filepath >= 1 && < 2.0,
        ghc-prim,
        language-glsl >= 0.0.2 && < 0.3,
        mtl >= 2.2 && < 3,
        parsec,
        pretty >= 1.0 && < 2.0,
        process,
        scientific,
        text >= 1 && < 2,
        unordered-containers,
        utf8-string,
        vector


--Test-Suite compiler-tests
--    ghc-options:
--        -O0
--
--    Type:
--        exitcode-stdio-1.0
--
--    Hs-Source-Dirs:
--        tests, src
--
--    Main-is:
--        Test.hs
--
--    other-modules:
--        Test.Compiler
--        Test.Property
--        Test.Property.Arbitrary
--        AST.Helpers
--        AST.Literal
--
--    build-depends:
--        test-framework > 0.8 && < 0.9,
--        test-framework-hunit >= 0.3 && < 0.4,
--        test-framework-quickcheck2 >= 0.3 && < 0.4,
--        HUnit >= 1.1 && < 2,
--        QuickCheck >= 2 && < 3,
--        aeson >= 0.11,
--        aeson-pretty >= 0.8 && < 0.9,
--        ansi-terminal >= 0.6.2.1 && < 0.7,
--        ansi-wl-pprint >= 0.6.7 && < 0.7,
--        base >=4.2 && <5,
--        binary >= 0.7.0.0 && < 0.8,
--        bytestring >= 0.9 && < 0.11,
--        containers >= 0.3 && < 0.6,
--        directory >= 1.0 && < 2.0,
--        edit-distance >= 0.2 && < 0.3,
--        filemanip >= 0.3.5 && < 0.4,
--        filepath >= 1 && < 2.0,
--        language-glsl >= 0.0.2 && < 0.3,
--        mtl >= 2.2 && < 3,
--        parsec,
--        pretty >= 1.0 && < 2.0,
--        process,
--        text >= 1 && < 2,
--        union-find >= 0.2 && < 0.3
