
Name: elm
Version: 0.19.1

Synopsis:
    The `elm` command line interface.

Description:
    This includes commands like `elm make`, `elm repl`, and many others
    for helping make Elm developers happy and productive.

Homepage: https://elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2011-present, Evan Czaplicki

Category: Compiler, Language

Cabal-version: >=1.9
Build-type: Simple

source-repository head
    type:     git
    location: git://github.com/elm/compiler.git


Flag dev {
  Description: Turn off optimization and make warnings errors
  Default: False
}


Executable elm
        ghc-options: -O2 -rtsopts -threaded "-with-rtsopts=-N -qg -A128m" -Wall -Werror
        -- add -eventlog for (elm make src/Main.elm +RTS -l; threadscope elm.eventlog)
        -- https://www.oreilly.com/library/view/parallel-and-concurrent/9781449335939/

    Hs-Source-Dirs:
        compiler/src
        builder/src
        terminal/impl
        terminal/src

    other-extensions:
        TemplateHaskell

    Main-Is:
        Main.hs

    other-modules:
        Bump
        Develop
        Diff
        Init
        Install
        Make
        Publish
        Repl

        -- terminal args
        Terminal
        Terminal.Chomp
        Terminal.Error
        Terminal.Helpers
        Terminal.Internal

        -- from terminal/
        Develop.Generate.Help
        Develop.Generate.Index
        Develop.StaticFiles
        Develop.StaticFiles.Build

        -- from builder/
        Build
        BackgroundWriter
        Deps.Bump
        Deps.Diff
        Deps.Registry
        Deps.Solver
        Deps.Website
        File
        Generate
        Http
        Reporting
        Reporting.Exit
        Reporting.Exit.Help
        Reporting.Task
        Stuff

        -- Elm things
        Elm.Outline
        Elm.Details
        --
        Elm.Compiler.Imports
        Elm.Compiler.Type
        Elm.Compiler.Type.Extract
        Elm.Constraint
        Elm.Docs
        Elm.Float
        Elm.Interface
        Elm.Kernel
        Elm.Licenses
        Elm.Magnitude
        Elm.ModuleName
        Elm.Package
        Elm.String
        Elm.Version

        -- data structures
        Data.Bag
        Data.Index
        Data.Map.Utils
        Data.Name
        Data.NonEmptyList
        Data.OneOrMore
        Data.Utf8

        -- json
        Json.Decode
        Json.Encode
        Json.String

        -- from compiler/
        AST.Canonical
        AST.Optimized
        AST.Source
        AST.Utils.Binop
        AST.Utils.Shader
        AST.Utils.Type
        Canonicalize.Effects
        Canonicalize.Environment
        Canonicalize.Environment.Dups
        Canonicalize.Environment.Foreign
        Canonicalize.Environment.Local
        Canonicalize.Expression
        Canonicalize.Module
        Canonicalize.Pattern
        Canonicalize.Type
        Compile
        Generate.Html
        Generate.JavaScript
        Generate.JavaScript.Builder
        Generate.JavaScript.Expression
        Generate.JavaScript.Functions
        Generate.JavaScript.Name
        Generate.Mode
        Nitpick.Debug
        Nitpick.PatternMatches
        Optimize.Case
        Optimize.DecisionTree
        Optimize.Expression
        Optimize.Module
        Optimize.Names
        Optimize.Port
        Parse.Declaration
        Parse.Expression
        Parse.Keyword
        Parse.Module
        Parse.Number
        Parse.Pattern
        Parse.Shader
        Parse.Space
        Parse.String
        Parse.Symbol
        Parse.Type
        Parse.Variable
        Parse.Primitives
        Reporting.Annotation
        Reporting.Doc
        Reporting.Error
        Reporting.Error.Canonicalize
        Reporting.Error.Docs
        Reporting.Error.Import
        Reporting.Error.Json
        Reporting.Error.Main
        Reporting.Error.Pattern
        Reporting.Error.Syntax
        Reporting.Error.Type
        Reporting.Render.Code
        Reporting.Render.Type
        Reporting.Render.Type.Localizer
        Reporting.Report
        Reporting.Result
        Reporting.Suggest
        Reporting.Warning
        Type.Constrain.Expression
        Type.Constrain.Module
        Type.Constrain.Pattern
        Type.Error
        Type.Instantiate
        Type.Occurs
        Type.Solve
        Type.Type
        Type.Unify
        Type.UnionFind
        Paths_elm

    Build-depends:
        ansi-terminal,
        ansi-wl-pprint < 1,
        base,
        binary,
        bytestring,
        containers,
        directory,
        edit-distance,
        file-embed,
        filelock,
        filepath,
        ghc-prim,
        haskeline,
        HTTP,
        http-client,
        http-client-tls,
        http-types,
        language-glsl,
        mtl,
        network,
        parsec,
        process,
        raw-strings-qq,
        scientific,
        SHA,
        snap-core,
        snap-server,
        template-haskell,
        time,
        unordered-containers,
        utf8-string,
        vector,
        zip-archive


Test-Suite elm-tests
    Type: exitcode-stdio-1.0

    ghc-options: -O0 -Wall

    Hs-Source-Dirs:
        tests
        compiler/src
        builder/src

    Main-Is:
        Test.hs

    other-modules:
        Test.Parse
        Test.Compile

        -- from builder/src
        File
        Reporting.Exit.Help

        -- auto-generated
        Paths_elm

        -- from compiler/src (needed by Parse.Module and its transitive deps)
        AST.Canonical
        AST.Optimized
        AST.Source
        AST.Utils.Binop
        AST.Utils.Shader
        AST.Utils.Type
        Canonicalize.Effects
        Canonicalize.Environment
        Canonicalize.Environment.Dups
        Canonicalize.Environment.Foreign
        Canonicalize.Environment.Local
        Canonicalize.Expression
        Canonicalize.Module
        Canonicalize.Pattern
        Canonicalize.Type
        Compile
        Data.Bag
        Data.Index
        Data.Map.Utils
        Data.Name
        Data.NonEmptyList
        Data.OneOrMore
        Data.Utf8
        Elm.Compiler.Imports
        Elm.Compiler.Type
        Elm.Compiler.Type.Extract
        Elm.Constraint
        Elm.Docs
        Elm.Float
        Elm.Interface
        Elm.Kernel
        Elm.Licenses
        Elm.Magnitude
        Elm.ModuleName
        Elm.Package
        Elm.String
        Elm.Version
        Generate.Html
        Generate.JavaScript
        Generate.JavaScript.Builder
        Generate.JavaScript.Expression
        Generate.JavaScript.Functions
        Generate.JavaScript.Name
        Generate.Mode
        Json.Decode
        Json.Encode
        Json.String
        Nitpick.Debug
        Nitpick.PatternMatches
        Optimize.Case
        Optimize.DecisionTree
        Optimize.Expression
        Optimize.Module
        Optimize.Names
        Optimize.Port
        Parse.Declaration
        Parse.Expression
        Parse.Keyword
        Parse.Module
        Parse.Number
        Parse.Pattern
        Parse.Primitives
        Parse.Shader
        Parse.Space
        Parse.String
        Parse.Symbol
        Parse.Type
        Parse.Variable
        Reporting.Annotation
        Reporting.Doc
        Reporting.Error
        Reporting.Error.Canonicalize
        Reporting.Error.Docs
        Reporting.Error.Import
        Reporting.Error.Json
        Reporting.Error.Main
        Reporting.Error.Pattern
        Reporting.Error.Syntax
        Reporting.Error.Type
        Reporting.Render.Code
        Reporting.Render.Type
        Reporting.Render.Type.Localizer
        Reporting.Report
        Reporting.Result
        Reporting.Suggest
        Reporting.Warning
        Type.Constrain.Expression
        Type.Constrain.Module
        Type.Constrain.Pattern
        Type.Error
        Type.Instantiate
        Type.Occurs
        Type.Solve
        Type.Type
        Type.Unify
        Type.UnionFind

    Build-depends:
        base,
        bytestring,
        containers,
        directory,
        filepath,
        ghc-prim,
        binary,
        scientific,
        utf8-string,
        vector,
        unordered-containers,
        language-glsl,
        raw-strings-qq,
        template-haskell,
        ansi-terminal,
        ansi-wl-pprint < 1,
        edit-distance,
        file-embed,
        mtl,
        parsec,
        process,
        time,
        zip-archive,
        tasty,
        tasty-hunit
