Name: elm
Version: 0.19.0

Synopsis:
    Executable for all Elm command line stuff
Description:
    Work with the REPL, reactor, make, install, etc.

Homepage:
    http://github.com/evancz/cli

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright: (c) 2012-present Evan Czaplicki

Category: Language

Build-type: Simple
Cabal-version: >=1.9

source-repository head
    type:     git
    location: git://github.com/evancz/cli.git

Executable elm

    ghc-options:
        -threaded -O2 -Wall -Werror

    hs-source-dirs:
        src

    other-extensions:
        TemplateHaskell

    Main-is:
        Main.hs

    other-modules:
        Bump
        CommandLine.Args
        CommandLine.Args.Internal
        Develop
        Develop.Compile
        Develop.Generate.Help
        Develop.Generate.Index
        Develop.Generate.NotFound
        Develop.StaticFiles
        Develop.StaticFiles.Build
        Diff
        Install
        Make
        Publish
        Repl

    Build-depends:
        ansi-wl-pprint >= 0.6.7.3,
        base >=4.2 && <5,
        binary,
        blaze-html,
        bytestring >= 0.9 && < 0.11,
        bytestring-trie,
        containers >= 0.3 && < 0.6,
        directory >= 1.0 && < 2.0,
        edit-distance,
        elm-compiler == 0.19.0,
        builder,
        file-embed,
        filepath >= 1 && < 2.0,
        haskeline,
        HTTP >= 4000.2.5 && < 4000.4,
        http-client,
        http-client-tls,
        http-types,
        mtl >= 2.2.1 && < 3,
        network >= 2.4 && < 2.7,
        parallel-io,
        process >= 1.5,
        snap-core,
        snap-server,
        template-haskell,
        text,
        time,
        unordered-containers,
        utf8-string,
        vector,
        websockets,
        websockets-snap,
        zip-archive
