Executable elm-server
  Main-is:             Server.hs
  Hs-Source-Dirs:      src, src/Parse, src/Types
  other-modules:       Ast, CompileToJS, GenerateHtml, Guid, Initialize,
                       Rename, Language.Elm, Binop, Combinators, Lexer,
                       ParsePatterns, Parser, ParserLib, ParseTypes, Tokens,
                       Types, Constrain, Hints, Types, Unify, ExtractNoscript
  ghc-options:         -O3
  Build-depends:       base >=4.2 && <5, containers >= 0.3, transformers >= 0.2,
                       mtl >= 2, parsec >= 3.1.1, blaze-html == 0.5.0.*,
                       HTTP >= 4000, happstack-server == 7.0.2,
                       deepseq, yesod-core, shakespeare-css, shakespeare-js, hamlet,
                       
