Name:                Elm-yesod
Version:             0.1.1.8
Synopsis:            The Elm language Yesod compatibility module.
Description:         This module provides a simple function to embed Elm code
                     as a Yesod widget.

Homepage:            http://elm-lang.org

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2011-2012 Evan Czaplicki

Category:            Compiler, Language

Build-type:          Simple

Extra-source-files:  README.md
Cabal-version:       >=1.6

source-repository head
  type:     git
  location: git://github.com/evancz/Elm.git

Library
  exposed-modules:     Language.Elm.Yesod
  Build-depends:       base >=4.2 && <5,
                       blaze-markup == 0.5.*,
                       Elm >= 0.1.1.8,
                       yesod-core >= 1,
                       hamlet,
                       shakespeare-css,
                       shakespeare-js