
Name:                Elm
Version:             0.1.1.8
Synopsis:            The Elm language module.
Description:         Elm aims to make client-side web-development more pleasant.
                     It is a statically/strongly typed, functional reactive
                     language to HTML, CSS, and JS. This package provides a
                     library for Elm compilation in Haskell and a compiler
                     executable.

Homepage:            http://elm-lang.org

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2011-2012 Evan Czaplicki

Category:            Compiler, Language

Build-type:          Simple

Extra-source-files:  README.md
Cabal-version:       >=1.6

source-repository head
  type:     git
  location: git://github.com/evancz/Elm.git

Executable elm
  -- .hs or .lhs file containing the Main module.
  Main-is:             Compiler.hs
  Hs-Source-Dirs:      src, src/Parse, src/Types, src/Language
  other-modules:       Ast,
                       Binop,
                       Combinators,
                       Constrain,
                       Guid,
                       Hints,
                       Lexer,
                       ParsePatterns,
                       Parser,
                       ParserLib,
                       ParseTypes,
                       Rename,
                       Tokens,
                       Types,
                       Types,
                       Unify
  
  ghc-options:         -O2
  Build-depends:       base >=4.2 && <5,
                       containers >= 0.3,
                       transformers >= 0.2,
                       mtl >= 2,
                       parsec >= 3.1.1,
                       blaze-html == 0.5.0.*,
                       blaze-markup == 0.5.1.*,
                       deepseq

Library
  exposed-modules:     Language.Elm,
                       Language.Elm.CompileToJS,
                       Language.Elm.ExtractNoscript,
                       Language.Elm.Initialize
  Hs-Source-Dirs:      src, src/Parse, src/Types
  other-modules:       Ast,
                       Guid,
                       Rename,
                       Binop,
                       Combinators,
                       Lexer,
                       ParsePatterns,
                       Parser,
                       ParserLib,
                       ParseTypes,
                       Tokens,
                       Types,
                       Constrain,
                       Hints,
                       Types,
                       Unify

  Build-depends:       base >=4.2 && <5,
                       containers >= 0.3,
                       transformers >= 0.2,
                       mtl >= 2,
                       parsec >= 3.1.1,
                       blaze-html == 0.5.0.*,
                       blaze-markup == 0.5.1.*,
                       deepseq,
                       template-haskell